fix star ornament on mobile

--- a/assets/styles/utility/_ornament.scss
+++ b/assets/styles/utility/_ornament.scss
@@ -11,7 +11,7 @@
     &--star {
         max-width: 120px;
         top: -144px;
-        right: -40px;
+        right: 0;
         transform: rotate(20deg);
         z-index: 150;
     }
